# clocked

./: .gitignore  LICENSE-MIT.txt  README.md
docs/: CNAME  index.md
hardware/: Clocked-v6-Adapter-IKEA-Tromma.step
software/rust-clocked-firmware/: Cargo.toml  diagram.json  wokwi.toml
software/rust-clocked-firmware/.cargo/: config.toml
software/rust-clocked-firmware/src/: main.rs
software/rust-clocked-firmware/tools/: generate_diagram.py
teaching/micropython/: 01 blink on board led.py  02 blink clock led.py  03 hsv to rgb.py
teaching/schematic/: Schematic.fzz
